--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 *{
     padding: 10px;
-    margin: 5px;
 }
 
 html {
@@ -9,7 +8,7 @@ html {
 
 body{
     background-color: bisque;
-    margin-top: 130px;
+    margin-top: 150px;
 }
 
 /* Table */
@@ -42,8 +41,8 @@ nav{
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     position: fixed;
     width: 100%;
-    top: 0;
-    left: 0;
+    top: 5px;
+    left: 5px;
     z-index: 1000;
 }
 
