--- a/styles.css
+++ b/styles.css
@@ -104,8 +104,9 @@ nav h1{
     height: 100vh;
     width: 250px;
     z-index: 999;
-    background-color: rgba(255, 255, 255, 0.137);
-    backdrop-filter: blur(10px);
+    background-image: url('path/to/your/semi-transparent-image.png');
+    background-size: cover;
+    background-position: center;
     box-shadow: -10px 0 10px rgba(0,0,0,0.1);
     display: none;
     flex-direction: column;
