--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ nav{
 
 .nav-links{
     background-color: rgba(255, 228, 196, 0.459);
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
